# yandex-comparator

./: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  pyproject.toml
app/: api.py  cache.py  main.py  models.py  parser.py
app/providers/: web_handler.py
app/services/: similarity.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: PlaylistLinksInput.tsx  ResultsDashboard.tsx
frontend/components/CommonTab/: CommonToAll.tsx
frontend/components/MatrixTab/: SimilarityMatrix.tsx
frontend/components/VennTab/: IntersectionDetailsPanel.tsx  SubsetSelector.tsx  VennDiagramCard.tsx
frontend/components/ui/: Providers.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  csv.ts  format.ts  setMath.ts  types.ts  validate.ts
tests/: test_parser.py  test_similarity.py  test_web_handler_provider.py
